# libodbcpq

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libodbcpq.spec.in
common/: Makefile.am
docs/: COMPATIBILITY.md
docs/migration/: postgresql-to-oracle.md
dpkg/: changelog.in  control  copyright
etc/: libodbcpq.ini
include/: Makefile.am  libodbcpq.h.in
libodbcpq/: Makefile.am  libodbcpq.c  libodbcpq.rc.in  libodbcpq_config.def  log.c  util.c
msvscpp/fdata_test_btree/: fdata_test_btree.vcproj
po/: Makevars.in
